dfds-serviceproxy/serviceannotated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  annotations: 
    dfds.serviceproxy.kubernetes.io/identifier: "my-service"
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
